Hopefully uptodate file

--- a/Python Notebook/Mastering Python/Mastering_Python_Notebook.ipynb
+++ b/Python Notebook/Mastering Python/Mastering_Python_Notebook.ipynb
@@ -95,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.000858306884765625\n"
+      "0.0005402565002441406\n"
      ]
     }
    ],
@@ -130,7 +130,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.34267544746398926\n"
+      "0.3429393768310547\n"
      ]
     }
    ],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,16 +247,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.08175396919250488"
+       "0.07601618766784668"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,16 +267,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3095877170562744"
+       "0.2581768035888672"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,16 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.40799951553344727"
+       "0.40801000595092773"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "True"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "0"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "4"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "[0, 1, 2, 3, 4]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "1"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "9"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "0"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        " []]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "True"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "False"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
        "{'a', 'm', 'p', 's'}"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
        "{'s'}"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
        "{'a', 'e', 'g', 'm', 'p', 's'}"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
        "{'a', 'e', 'g', 'm', 'p'}"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
        "{'a', 'm', 'p'}"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
        "(1, (2, 3))"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
        "1"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
        "(2, 3)"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -891,6 +891,238 @@
     "spam, *eggs = 1,2,3,4\n",
     "pprint.pprint(spam)\n",
     "pprint.pprint(eggs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam, *eggs = range(10)\n",
+    "spam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eggs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "args: (1, 2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#this works for even for function arguments\n",
+    "def eggs(*args):\n",
+    "    print('args:', args)\n",
+    "    \n",
+    "eggs(1,2,3)\n",
+    "\n",
+    "#need to meditate on this ....\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spam: spam, eggs: eggs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('spam', 'eggs')"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def spam_eggs():\n",
+    "    return 'spam', 'eggs'\n",
+    "\n",
+    "spam, eggs = spam_eggs()\n",
+    "print('spam: %s, eggs: %s' % (spam,eggs))\n",
+    "spam, eggs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'key' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-60-91c41b0f61bf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbuiltins\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mbuiltin_vars\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvars\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuiltins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlocals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlocals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32melif\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mglobals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'key' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import builtins\n",
+    "builtin_vars = vars(builtins)\n",
+    "if key in locals():\n",
+    "    value = locals()[key]\n",
+    "elif key in globals():\n",
+    "    value = globals()[key]\n",
+    "elif key in builtin_vars:\n",
+    "    value = builtin_vars[key]\n",
+    "else:\n",
+    "    raise NameError('name %r is not defined' % key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'key' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-61-2a20e6df8e29>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmappings\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mglobals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlocals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvars\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuiltins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mmapping\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmappings\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmapping\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmapping\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'key' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import builtins\n",
+    "mappings = globals(), locals(), vars(builtins)\n",
+    "for mapping in mappings:\n",
+    "    if key in mapping:\n",
+    "        value = mapping[key]\n",
+    "        break\n",
+    "else:\n",
+    "    raise NameError('name %r is not defined' % key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'key' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-62-ed859b3b5b8c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcollections\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmappings\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcollections\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mChainMap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mglobals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlocals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvars\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuiltins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmappings\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'key' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import builtins\n",
+    "import collections\n",
+    "mappings = collections.ChainMap(globals(), locals(), vars(builtins))\n",
+    "value = mappings[key]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Count for  e: 1\n",
+      "Count for  g: 2\n",
+      "Count for  g: 2\n",
+      "Count for  s: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "\n",
+    "counter = collections.Counter('eggs')\n",
+    "for k in 'eggs':\n",
+    "    print('Count for  %s: %d' % (k, counter[k]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39.0: 49375\n",
+      "38.0: 48125\n",
+      "37.0: 46875\n",
+      "36.0: 45625\n",
+      "35.0: 44375\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "import collections\n",
+    "\n",
+    "counter = collections.Counter()\n",
+    "for i in range(0,1000000):\n",
+    "    counter[math.sqrt(i) // 25] += 1\n",
+    "for key, count in counter.most_common(5):\n",
+    "    print('%s: %d' % (key,count))\n",
+    "#for i in range(0,1000):\n",
+    " #   print(math.sqrt(i) // 25)"
    ]
   },
   {
