--- a/Python Notebook/Mastering Python/Mastering_Python_Notebook.ipynb
+++ b/Python Notebook/Mastering Python/Mastering_Python_Notebook.ipynb
@@ -1127,6 +1127,137 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "deque([1, 2, 3])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "import collections\n",
+    "\n",
+    "queue = collections.deque()\n",
+    "queue.append(1)\n",
+    "queue.append(2)\n",
+    "queue.append(3)\n",
+    "queue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "queue.pop() #pops on off the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([0], maxlen=2)\n",
+      "deque([0, 1], maxlen=2)\n",
+      "deque([1, 2], maxlen=2)\n",
+      "deque([2, 3], maxlen=2)\n",
+      "deque([3, 4], maxlen=2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#another useful feature of deque is that deque can be used as a \n",
+    "#circular queue with the maxlen parameter.  \n",
+    "\n",
+    "import collections\n",
+    "\n",
+    "circular = collections.deque(maxlen=2)\n",
+    "for i in range(5):\n",
+    "    circular.append(i)\n",
+    "    print(circular)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "deque([3, 4])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "circular"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ueue.Queue #should be a thread safe queue #didnt work in jnotebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes = [\n",
+    "    ('a','b'),\n",
+    "    ('a','c'),\n",
+    "    ('b','a'),\n",
+    "    ('c','a'),\n",
+    "    ('d','a'),\n",
+    "    ('d','b'),\n",
+    "    ('d','c')\n",
+    "]\n",
+    "\n",
+    "graph = dict()\n",
+    "for from_, to in nodes:\n",
+    "    if from_ not in graph:\n",
+    "        graph[from_] = []\n",
+    "        graph[from_].append(to)\n",
+    "\n",
+    "import pprint\n",
+    "pprint"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
