--- a/Python Notebook/Mastering Python/Mastering_Python_Notebook.ipynb
+++ b/Python Notebook/Mastering Python/Mastering_Python_Notebook.ipynb
@@ -1232,9 +1232,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': ['b', 'c'], 'b': ['a'], 'c': ['a'], 'd': ['a', 'b', 'c']}\n"
+     ]
+    }
+   ],
    "source": [
     "nodes = [\n",
     "    ('a','b'),\n",
@@ -1250,10 +1258,361 @@
     "for from_, to in nodes:\n",
     "    if from_ not in graph:\n",
     "        graph[from_] = []\n",
-    "        graph[from_].append(to)\n",
+    "    graph[from_].append(to)\n",
     "\n",
     "import pprint\n",
-    "pprint"
+    "pprint.pprint(graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'list'>,\n",
+      "            {'a': ['b', 'c'],\n",
+      "             'b': ['a'],\n",
+      "             'c': ['a'],\n",
+      "             'd': ['a', 'b', 'c']})\n"
+     ]
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "\n",
+    "graph = collections.defaultdict(list)\n",
+    "\n",
+    "for from_, to in nodes:\n",
+    "    graph[from_].append(to)\n",
+    "    \n",
+    "import pprint\n",
+    "pprint.pprint(graph)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(int, {'spam': 5})"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counter = collections.defaultdict(int)\n",
+    "\n",
+    "counter['spam'] += 5\n",
+    "counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import collections\n",
+    "def tree(): return collections.defaultdict(tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"other\": {\n",
+      "        \"black\": 0,\n",
+      "        \"white\": 16777215\n",
+      "    },\n",
+      "    \"primary\": {\n",
+      "        \"blue\": 255,\n",
+      "        \"green\": 65280,\n",
+      "        \"red\": 16711680\n",
+      "    },\n",
+      "    \"secondary\": {\n",
+      "        \"aqua\": 65535,\n",
+      "        \"fuchsia\": 16711935,\n",
+      "        \"yellow\": 16776960\n",
+      "    }\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import collections\n",
+    "\n",
+    "def tree():\n",
+    "    return collections.defaultdict(tree)\n",
+    "\n",
+    "colours = tree()\n",
+    "colours['other']['black']= 0x000000\n",
+    "colours['other']['white']= 0xFFFFFF\n",
+    "colours['primary']['red']= 0xFF0000\n",
+    "colours['primary']['green']= 0x00FF00\n",
+    "colours['primary']['blue']=0x0000FF\n",
+    "colours['secondary']['yellow']= 0xFFFF00\n",
+    "colours['secondary']['aqua']= 0x00FFFF\n",
+    "colours['secondary']['fuchsia']= 0xFF00FF\n",
+    "\n",
+    "print(json.dumps(colours,sort_keys=True, indent=4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://docs.python.org/2/library/collections.html\n",
+    "#for the official guide.   with examples\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "\n",
+    "Point = collections.namedtuple('Point',['x','y','z'])\n",
+    "\n",
+    "point_a = Point(1,2,3)\n",
+    "point_a\n",
+    "\n",
+    "point_b = Point(x=4,z=5,y=6)\n",
+    "point_b\n",
+    "\n",
+    "x,y,z = point_a\n",
+    "x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Color.red\n",
+      "Color.red\n",
+      "Color.red\n",
+      "red\n",
+      "1\n",
+      "True\n",
+      "True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import enum\n",
+    "\n",
+    "class Color(enum.Enum):\n",
+    "    red = 1\n",
+    "    green = 2\n",
+    "    blue = 3\n",
+    "\n",
+    "print(Color.red)\n",
+    "print(Color['red'])\n",
+    "print(Color(1))\n",
+    "print(Color.red.name)\n",
+    "print(Color.red.value)\n",
+    "\n",
+    "print(isinstance(Color.red, Color))\n",
+    "print(Color.red is Color['red'])\n",
+    "\n",
+    "Color.red is Color(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Color.red\n",
+      "Color.green\n",
+      "Color.blue\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{<Color.green: 2>: 65280}"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for color in Color:\n",
+    "    print(color)\n",
+    "    \n",
+    "colors = dict()\n",
+    "colors[Color.green]=0x00FF00\n",
+    "\n",
+    "colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import enum\n",
+    "\n",
+    "class Spam(enum.Enum):\n",
+    "    EGGS = 'eggs'\n",
+    "    \n",
+    "Spam.EGGS == 'eggs'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import enum\n",
+    "\n",
+    "class Spam(str, enum.Enum):\n",
+    "    EGGS = 'eggs'\n",
+    "    \n",
+    "Spam.EGGS == 'eggs'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('b', 2), ('c', 3), ('a', 1)])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Ordered Dict\n",
+    "\n",
+    "import collections\n",
+    "\n",
+    "spam = collections.OrderedDict()\n",
+    "spam['b']=2\n",
+    "spam['c']=3\n",
+    "spam['a']=1\n",
+    "spam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b 2\n",
+      "c 3\n",
+      "a 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in spam.items():\n",
+    "    print(key,value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(1, 5)"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
    ]
   },
   {
