--- a/Python Notebook/Mastering Python/Mastering_Python_Notebook.ipynb
+++ b/Python Notebook/Mastering Python/Mastering_Python_Notebook.ipynb
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1597,22 +1597,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 3, 1, 2]\n",
+      "[1, 2, 3, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import bisect\n",
+    "\n",
+    "sorted_list= []\n",
+    "sorted_list.append(5)\n",
+    "sorted_list.append(3)\n",
+    "sorted_list.append(1)\n",
+    "sorted_list.append(2)\n",
+    "print(sorted_list)\n",
+    "sorted_list.sort()\n",
+    "print(sorted_list)\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Using bisect\n",
+    "sorted_list=[]\n",
+    "bisect.insort(sorted_list,5)\n",
+    "bisect.insort(sorted_list,3)\n",
+    "bisect.insort(sorted_list,1)\n",
+    "bisect.insort(sorted_list,2)\n",
+    "print(sorted_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "range(1, 5)"
+       "True"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test"
+    "import bisect\n",
+    "\n",
+    "sorted_list = [1,2,3,5]\n",
+    "def contains(sorted_list,value):\n",
+    "    i = bisect.bisect_left(sorted_list, value)\n",
+    "    return i < len(sorted_list) and sorted_list[i] == value\n",
+    "\n",
+    "contains(sorted_list,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contains(sorted_list,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.907755278982137"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.log(1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10**3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$x^{6.9077}=1000$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4342979573519406"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.log10(1000)/6.9077"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.7164392688390824"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10**.434"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.718281828459045"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.e"
    ]
   },
   {
