--- a/Python Notebook/Mastering Python/Functional Programming.ipynb
+++ b/Python Notebook/Mastering Python/Functional Programming.ipynb
@@ -181,18 +181,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]]\n",
+      "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n"
+     ]
     }
    ],
    "source": [
@@ -201,7 +199,148 @@
     "    [5,6,7,8],\n",
     "    [9,10,11,12],\n",
     "    ]\n",
-    "matrix"
+    "print(matrix)\n",
+    "reshaped_matrix = [\n",
+    "    [\n",
+    "        [y for x in matrix for y in x][i*len(matrix) + j]\n",
+    "        for j in range(len(matrix))\n",
+    "    ]\n",
+    "        for i in range(len(matrix))\n",
+    "    ]\n",
+    "    \n",
+    "import pprint\n",
+    "pprint.pprint(reshaped_matrix , width = 40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(reshaped_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#dict comprehensions\n",
+    "{x: x **2 for x in range(10)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 1, 3: 9, 5: 25, 7: 49, 9: 81}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{x:x ** 2 for x in range(10) if x % 2}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0, 0, 1, 2, 0, 2, 4]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x*y for x in range(3) for y in range(3)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 1, 2, 4}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{x*y for x in range(3) for y in range(3)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Spam:1>, <Spam:2>, <Spam:4>, <Spam:5>]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#lambda functions\n",
+    "class Spam(object):\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return '<%s:%s>' % (self.__class__.__name__, self. value)\n",
+    "    \n",
+    "spams = [Spam(5), Spam(2), Spam(4), Spam(1)]\n",
+    "sorted_spams =  sorted(spams, key=lambda spam: spam.value)\n",
+    "sorted_spams"
    ]
   },
   {
